JNDS-8 db + node api dockerizing

--- a/node_api/package.json
+++ b/node_api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "back",
+  "name": "node_api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
