--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_DEV_PASSWORD}
     ports:
       - "33333:3306"
-    container_name: mysql-db
+    container_name: mysql_db
     volumes:
       - db-data:/var/lib/mysql
     tty: true
@@ -19,6 +19,19 @@ services:
     restart: always
     ports:
       - 8080:8080
+  node_api:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./node_api
+    volumes:
+      - /app/node_modules
+      - ./node_api:/app
+    env_file:
+      - .env
+    depends_on:
+      - db
+    ports:
+      - 5000:5000
 volumes:
   db-data:
     driver: local
