JNDS-9 도커라이징시킨 디비 제거

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DB_HOST=0.0.0.0
-DB_PORT=33333
-DB_USERNAME=root
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
 DB_DEV_PASSWORD=
 DB_TEST_PASSWORD=
 DB_PROD_PASSWORD=
