--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env ANALYZER=true NODE_ENV=production next build",
-    "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
