--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -13,12 +13,10 @@
     "es6": true
   },
   "extends": [
-    "airbnb"
+    "airbnb",
+    "plugin:prettier/recommended"
   ],
-  "plugins": [
-    "import",
-    "react-hooks"
-  ],
+  "plugins": ["import", "react-hooks", "prettier"],
   "rules": {
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/anchor-is-valid": "off",
@@ -29,6 +27,16 @@
     "react/jsx-one-expression-per-line": "off",
     "object-curly-newline": "off",
     "linebreak-style": "off",
-    "no-param-reassign" : "off"
+    "no-param-reassign": "off",
+    "import/no-cycle": "off",
+    "consistent-return" : "off",
+    "react/jsx-props-no-spreading" : "off",
+    "implicit-arrow-linebreak" : "off",
+    "comma-dangle": "off",
+    "no-unused-vars" : "off",
+    "no-alert" : "off",
+    "react/jsx-wrap-multilines" : "off",
+    "import/prefer-default-export" : "off",
+    "operator-linebreak" : "off"
   }
 }
