--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "cross-env ANALYZER=true NODE_ENV=production next build",
-    "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80"
+    "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80",
+    "eslint:fix": "eslint . --ext .js --fix"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -40,10 +41,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.0"
   }
 }
