[JNDS-12-git-hook-pre-push] test

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "## 환경변수 설정",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "node husky install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
