--- a/node_api/package.json
+++ b/node_api/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
     "start": "pm2 start app.js",
+    "lint": "eslint \"**/*.{js}\" --ignore-pattern node_modules/",
     "db:makemigrations": "./node_modules/sequelize-auto-migrations/bin/makemigration.js"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.1",
@@ -31,6 +33,7 @@
     "sequelize-auto-migrations": "^1.0.3"
   },
   "devDependencies": {
+    "eslint": "^7.7.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "sequelize-cli": "^6.2.0"
