--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "cross-env ANALYZER=true NODE_ENV=production next build",
-    "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80"
+    "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80",
+    "lint": "eslint \"**/*.{js,jsx}\" --ignore-pattern node_modules/"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
