--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## 환경변수 설정",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-prettier": "cd client && prettier --write",
+    "client-eslint": "cd client && npm run lint",
+    "node_api-prettier": "cd node_api && prettier --write",
+    "node_api-eslint": "cd node_api && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,8 @@
   },
   "homepage": "https://github.com/jonsoku2/tamastudy#readme",
   "devDependencies": {
-    "husky": "^4.2.5"
+    "eslint": "^7.7.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11"
   }
 }
