--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
   "lint-staged" : {
     "client/**/*.{js,jsx}": [
       "npm run client-prettier",
-      "npm run client-eslint",
-      "git add"
+      "npm run client-eslint"
     ],
     "node_api/**/*.{js}": [
       "npm run node_api-prettier",
-      "npm run node_api-eslint",
-      "git add"
-    ]
+      "npm run node_api-eslint"
+    ],
+    "*" : [
+      "git add" 
+   ]
   }
 }
