[JNDS-12-git-hook-pre-push] test

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "node_api/**/*.{js}": [
       "npm run node_api-prettier",
       "npm run node_api-eslint"
-    ]
+    ],
+    "*" : [
+      "git add" 
+   ]
   }
 }
