--- a/node_api/package.json
+++ b/node_api/package.json
@@ -34,8 +34,22 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.0",
     "sequelize-cli": "^6.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "../huskyhooks/pre-push",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js}": [
+      "prettier --write .",
+      "git add"
+    ]
   }
 }
