--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "cross-env ANALYZER=true NODE_ENV=production next build",
     "start": "cross-env ANALYZER=true NODE_ENV=production next start -p 80",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix --ext .js,.jsx ."
+    "lint:fix": "eslint --fix-dry-run --ext .js,.jsx ."
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -57,8 +57,8 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write .",
+    "*.{js,jsx,ts,tsx}": [
+      "npx prettier --write",
       "npm run lint:fix"
     ]
   }
