[JNDS-12-git-hook-pre-push] test

--- a/node_api/package.json
+++ b/node_api/package.json
@@ -48,10 +48,9 @@
     }
   },
   "lint-staged": {
-    "*.{js}": [
-      "npx prettier --write",
-      "npm run lint:fix",
-      "git add"
+    "*": [
+      "npx prettier --write .",
+      "npm run lint:fix"
     ]
   }
 }
