[JNDS-12-git-hook-pre-push] test

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tama",
   "version": "1.0.0",
-  "description": "## 환경변수 설정",
+  "description": "aaa",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,10 +23,14 @@
     }
   },
   "lint-staged": {
-    "client/**/*.{js,jsx}": [
+    "client/*": [
         "cd client && npx prettier --write",
         "git add"
-      ]
+    ],
+    "node_api/*": [
+        "cd node_api && npx prettier --write",
+        "git add"
+    ]
   },
   "devDependencies": {
     "husky": "^4.2.5",
