--- a/package.json
+++ b/package.json
@@ -23,12 +23,8 @@
     }
   },
   "lint-staged": {
-    "client/*": [
-        "npm test",
-        "git add"
-    ],
-    "node_api/*": [
-        "cd node_api && npx prettier --write",
+    "src/**/*.{js,jsx,ts,tsx,json,css}": [
+        "prettier --write",
         "git add"
     ]
   },
