--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css}": [
+    "**/*.{js,jsx,ts,tsx,json,css}": [
         "prettier --write",
         "git add"
     ]
