--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
       "pre-commit": "lint-staged"
     }
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11"
