--- a/node_api/.eslintrc
+++ b/node_api/.eslintrc
@@ -1,5 +1,10 @@
 {
-  "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "extends": [
+    "eslint:recommended", 
+    "plugin:node/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": 2020
   },
@@ -12,6 +17,8 @@
     "node/prefer-global/url-search-params": ["error", "always"],
     "node/prefer-global/url": ["error", "always"],
     "node/prefer-promises/dns": "error",
-    "node/prefer-promises/fs": "error"
+    "node/prefer-promises/fs": "error",
+    "node/no-unsupported-features/es-syntax" : 0,
+    "no-process-exit" : 0
   }
 }
