--- a/node_api/package.json
+++ b/node_api/package.json
@@ -22,15 +22,18 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-session": "^1.17.1",
+    "googleapis": "^59.0.0",
     "helmet": "^4.1.0",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "open": "^7.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pm2": "^4.4.1",
     "sequelize": "^6.3.4",
-    "sequelize-auto-migrations": "^1.0.3"
+    "sequelize-auto-migrations": "^1.0.3",
+    "server-destroy": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
