--- a/node_api/.eslintrc
+++ b/node_api/.eslintrc
@@ -19,6 +19,7 @@
     "node/prefer-promises/dns": "error",
     "node/prefer-promises/fs": "error",
     "node/no-unsupported-features/es-syntax" : 0,
-    "no-process-exit" : 0
+    "no-process-exit" : 0,
+    "node/no-unpublished-require": 0
   }
 }
