--- a/node_api/package.json
+++ b/node_api/package.json
@@ -36,6 +36,7 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^5.0.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.0",
     "sequelize-cli": "^6.2.0"
