--- a/node_api/package.json
+++ b/node_api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha src/test/**/*.*.test.js --reporter spec --exit",
     "dev": "nodemon src/app.js",
     "start": "pm2 start src/app.js",
     "db:makemigrations": "./node_modules/sequelize-auto-migrations/bin/makemigration.js",
@@ -33,12 +33,16 @@
     "sequelize-auto-migrations": "^1.0.3"
   },
   "devDependencies": {
+    "assert": "^2.0.0",
+    "chai": "^4.2.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "faker": "^5.0.0",
+    "mocha": "^8.1.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.0",
+    "request": "^2.88.2",
     "sequelize-cli": "^6.2.0"
   }
 }
