--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.4.1",
     "react-id-swiper": "^4.0.0",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-quill": "2.0.0-beta.2",
     "react-redux": "^7.2.1",
     "react-transition-group": "^4.4.1",
